# jwst-msafit

./: README.md  pyproject.toml
examples/: example_lsf.html  example_lsf.ipynb
msafit/: __init__.py
msafit/fitting/: dependencies.py  fit.py  fit_model.py  likelihood.py  mcmc.py  priors.py
msafit/fpa/: __init__.py  detector.py  psf.py  spectrum.py
msafit/lsf/: __init__.py  fit_func.py  lsf.py
msafit/model/: __init__.py  config.py  cube.py  light_profile.py  models.py  velocity_field.py
msafit/utils/: array_utils.py  convolution.py  obs_utils.py  sampling.py  trace.py
